Ingress/apache-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: apache-deployment
 labels:
  author: Ramakrishna
  type: apache-appserver
spec:
 replicas: 2
 selector:
  matchLabels:
   name: apache-appserver
 template:
  metadata:
   name: apache-pod
   labels:
    name: apache-appserver
  spec:
   containers:
    - name: myapache
      image: httpd
      ports:
       - containerPort: 80
...
