Ingress/nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
 name: nginx-service
spec:
 type: ClusterIP
 ports:
  - name: http
    targetPort: 80
    port: 80
 selector:
   name: nginx-appserver
...
